syntax = "proto3";

package com.juggle.chat.services;

message ApiKey{
    string appkey = 1;
    int64 created_time = 2;
}

message AuthToken {
    string appkey = 1;
    int32 version = 2;
    bytes tokenValue = 3;
}

message AuthTokenValue{
    string userId = 1;
    string deviceId = 2;
    int64 tokenTime = 3;
}